# focusbar

./: .gitignore  CHANGELOG.md  FEATURES.md  README.md  index.html  package-lock.json  package.json
docs/: versionamento.md
docs/superpowers/specs/: 2026-05-06-focusbar-status-responsive-design.md
scripts/: sync-version.mjs
src/: App.css  App.tsx  index.css  useTimer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
