[package]
name = "focusbar"
version = "0.1.0"
description = "FocusBar - Timer, Pomodoro e Jornada de Trabalho"
authors = ["you"]
license = ""
repository = ""
default-run = "focusbar"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "macos-private-api",
  "system-tray",
  "notification-all",
  "window-all",
  "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
